# TyporaUploaderAzure

./: .gitignore  Cargo.toml  README.md  TyporaUploaderAzure.csproj  TyporaUploaderAzure.sln  compiling.md
.github/workflows/: release.yml  rust.yml
dotnet/: .gitignore  Program.cs  TyporaUploaderAzure.csproj
dotnet/Properties/: launchSettings.json
rust/: Cargo.toml
rust/src/: main.rs
src/: main.rs
url_test/: Cargo.toml
url_test/src/: main.rs
