[package]
name = "typora_uploader_azure_blob"
authors = ["Dr. Christian Geuer-Pollmann <chgeuer@microsoft.com>"]
version = "0.1.3"
edition = "2021"

[dependencies]
azure_core = "0.8.0"
azure_storage = "0.9.0"
azure_storage_blobs = "0.9.0"
base32 = "0.4"
chrono = "0.4"
url = "2.3"
md5 = "0.7"
tokio = { version = "1.23.0", features = ["full"] }
reqwest = "0.11"
futures = "0.3.25"
